# backend/app/schemas/system.py
@@ -1,0 +1,9 @@
+from pydantic import BaseModel
+
+
+class LivePushIn(BaseModel):
+    enabled: bool
+
+
+class LivePushOut(BaseModel):
+    enabled: bool
